カスタムメニュー修正

--- a/src/scss/module/_footer.scss
+++ b/src/scss/module/_footer.scss
@@ -95,6 +95,7 @@
     display: flex;
 }
 
+/*
 .footer__nav-list{
     display: flex;
     justify-content: flex-end;
@@ -128,6 +129,7 @@
         color: g.$s-color_menu-link_hover;
     }
 }
+*/
 
 .footer__banner{
     display: flex;
