--- a/src/scss/module/_index.scss
+++ b/src/scss/module/_index.scss
@@ -2,10 +2,10 @@
 @forward 'header';
 
 // ドロップダウン
-@forward 'dropdown';
+//@forward 'dropdown';
 
 // ドロワー
-@forward 'drawer';
+//@forward 'drawer';
 
 // フッター
 @forward 'footer';
