--- a/src/scss/wordpress/_index.scss
+++ b/src/scss/wordpress/_index.scss
@@ -1,2 +1,8 @@
-// WPヘッダー
-@forward 'wp_header';
+// WPドロップダウン
+@forward 'wp_dropdown';
+
+// WPドロワー
+@forward 'wp_drawer';
+
+// WPフッター
+@forward 'wp_footer';
