--- a/src/scss/module/_price-box.scss
+++ b/src/scss/module/_price-box.scss
@@ -7,11 +7,11 @@
 /* price-box-group */
 .price-box-group{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 20px;
 
-    @include g.media(pc){
-        flex-direction: row;
+    @include g.media(sp){
+        flex-direction: column;
     }
 }
 
