お問い合わせ対応

--- a/src/scss/module/_form-radio.scss
+++ b/src/scss/module/_form-radio.scss
@@ -19,6 +19,9 @@
 }
 
 .form-radio__input{
+    width: 0;
+    height: 0;
+    
     &:focus + .form-radio__icon{
         outline: 2px solid g.$s-color_border_focused;
     }
