--- a/src/scss/module/_index.scss
+++ b/src/scss/module/_index.scss
@@ -95,10 +95,10 @@
 @forward 'form-select';
 
 // ラジオボタン
-@forward 'form-radio';
+//@forward 'form-radio';
 
 // チェックボックス
-@forward 'form-checkbox';
+//@forward 'form-checkbox';
 
 // 検索ボックス
 @forward 'search-box';
