--- a/src/scss/wordpress/_wp_form-radio.scss
+++ b/src/scss/wordpress/_wp_form-radio.scss
@@ -1,32 +1,35 @@
 @use '../global' as g;
 
 /*********************************
-    チェックボックス
+     WPラジオボタン
 *********************************/
 
-/* form-checkbox-group */
-.form-checkbox-group{
+.form-radio{
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
 }
 
-/* form-checkbox */
-.form-checkbox{
+.form-radio .wpcf7-list-item{
+    margin: 0;
+    line-height: g.$line-height_same;
+}
+
+.form-radio > span > label{
     display: inline-flex;
     align-items: center;
     cursor: pointer;
 }
 
-.form-checkbox__input{
+.form-radio > span > label > input{
     width: 0;
     height: 0;
-    
-    &:focus + .form-checkbox__icon{
+
+    &:focus + .form-radio__icon{
         outline: 2px solid g.$s-color_border_focused;
     }
 
-    &:checked + .form-checkbox__icon{
+    &:checked + .form-radio__icon{
         border-color: g.$p-color_blue_900;
 
         &::before{
@@ -35,7 +38,7 @@
     }
 }
 
-.form-checkbox__icon{
+.form-radio__icon{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,18 +46,18 @@
     height: 20px;
     margin-right: 10px;
     border: 2px solid g.$p-color_grey_900;
-    border-radius: 4px;
+    border-radius: 100px;
 
     &::before{
         display: none;
-        font-family: 'Font Awesome 6 Free';
-        font-weight: 900;
-        content: "\f00c"; 
-        font-size: 14px;
-        color: g.$p-color_blue_900;
+        content: "";
+        width: 8px;
+        height: 8px;
+        background-color: g.$p-color_blue_900;
+        border-radius: 100px;
     }
 }
 
-.form-checkbox__text{
+.form-radio .wpcf7-list-item-label{
     line-height: g.$line-height_s;
 }
