--- a/src/scss/module/_index.scss
+++ b/src/scss/module/_index.scss
@@ -50,7 +50,7 @@
 @forward 'list';
 
 // ページャー
-//@forward 'pager';
+@forward 'pager';
 
 // ポストリスト
 @forward 'posts';
@@ -95,10 +95,10 @@
 @forward 'form-select';
 
 // ラジオボタン
-//@forward 'form-radio';
+@forward 'form-radio';
 
 // チェックボックス
-//@forward 'form-checkbox';
+@forward 'form-checkbox';
 
 // 検索ボックス
 @forward 'search-box';
