サイドバー修正

--- a/src/scss/wordpress/_wp_sidebar.scss
+++ b/src/scss/wordpress/_wp_sidebar.scss
@@ -4,7 +4,7 @@
     WPサイドバー
 *********************************/
 
-.sidebar-list > li > a{
+.wp_sidebar-menu > li > a{
     color: g.$s-color_menu-link_normal;
     font-size: g.$font-size_l;
     line-height: g.$line-height_s;
