管理バーを修正＆functionsを整理

--- a/src/scss/wordpress/_index.scss
+++ b/src/scss/wordpress/_index.scss
@@ -22,8 +22,8 @@
 // WPチェックボックス
 @forward 'wp_form-checkbox';
 
-// WPフォーム
-@forward 'wp_form';
+// WPお問い合わせ
+@forward 'wp_contact';
 
 // WPサイトマップ
 @forward 'wp_sitemap';
