--- a/src/scss/wordpress/_wp_contact.scss
+++ b/src/scss/wordpress/_wp_contact.scss
@@ -1,7 +1,7 @@
 @use '../global' as g;
 
 /*********************************
-     WPフォーム
+     WPお問い合わせ
 *********************************/
 
 /* レイアウト修正 */
