--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -10,7 +10,7 @@
     width: 100%; 
     background-color: g.$s-color_background_primary;
 
-    &--breadcrum{
+    &--breadcrumb{
         .container__inner{
             padding: 20px 20px 0 20px;
         }
